# engine2

./: .gitignore  CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: entity_copy.vs  terrain.vs
src/: input.hh  main.cc  ray.hh
src/camera/: camera.hh  fps_camera.cc  fps_camera.hh  noclip_camera.cc  noclip_camera.hh
src/common/: units.hh  window.cc  window.hh
src/entities/: entity.cc  entity.hh  movable_entity.cc  movable_entity.hh  player.hh  static_entity.hh
src/mesh/: mesh.hh  mesh_instance.cc  mesh_instance.hh  mesh_loader.hh
src/shader/: shader.cc  shader.hh
src/terrain/: terrain.cc  terrain.hh
tools/: builder.cc
